tests/baselines/reference/declInput-2.errors.txt
tests/cases/compiler/declInput-2.ts(10,21): error TS4028: Type of property 'm22' references inaccessible name 'C'.
tests/cases/compiler/declInput-2.ts(13,21): error TS4028: Type of property 'm25' references inaccessible name 'I2'.
tests/cases/compiler/declInput-2.ts(16,24): error TS4038: Return type of method 'm252' references inaccessible name 'I2'.
tests/cases/compiler/declInput-2.ts(18,23): error TS4028: Type of parameter 'i' references inaccessible name 'I2'.
tests/cases/compiler/declInput-2.ts(19,21): error TS4038: Return type of method 'm3' references inaccessible name 'C'.


==== tests/cases/compiler/declInput-2.ts (5 errors) ====
    module M {
        class C { }
        export class E {}
        export interface I1 {}
        interface I2 {}
        export class D {
            private c: C; // don't generate
            public m1: number;
            public m2: string;
            public m22: C; // don't generate
                        ~
!!! error TS4028: Type of property 'm22' references inaccessible name 'C'.
            public m23: E;
            public m24: I1;
            public m25: I2; // don't generate
                        ~~
!!! error TS4028: Type of property 'm25' references inaccessible name 'I2'.
            public m232(): E { return null;}
            public m242(): I1 { return null; }
            public m252(): I2 { return null; } // don't generate
                           ~~
!!! error TS4038: Return type of method 'm252' references inaccessible name 'I2'.
            public m26(i:I1) {}
            public m262(i:I2) {}
                          ~~
!!! error TS4028: Type of parameter 'i' references inaccessible name 'I2'.
            public m3():C { return new C(); }
                        ~
!!! error TS4038: Return type of method 'm3' references inaccessible name 'C'.
        }
    }